syntax = "proto3";

package order;

service OrderService {
  rpc makeBuyOrder(OrderRequest) returns (OrderResponse);
  rpc makeSellOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string userId = 1;
  string coinCode = 2;
  double amount = 3;
  double price = 4;
}

message OrderResponse {
  string status = 1;
  string orderId = 2;
}
